Added dunfell to compatibility list.
Signed-off-by: Eduardo Righes <eduardo.righes@gmail.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-emr = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-emr = "6"
 
 LAYERDEPENDS_meta-emr = "core"
-LAYERSERIES_COMPAT_meta-emr = "thud"
+LAYERSERIES_COMPAT_meta-emr = "thud dunfell"
